Revert: Signal-API notification
